add functions to help with descriptions of severity, items, and item 8 types

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: honos
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9001
+Title: Analyse and Visualise the Nation Outcome Scales (HoNOS)
+Version: 0.1.0
+Date: 2021-02-08
 Authors@R: 
     person(given = "Milan",
            family = "Wiedemann",
            role = c("aut", "cre"),
            email = "milan.wiedemann@gmail.com",
            comment = c(ORCID = "0000-0003-1991-282X"))
-Description: What the package does (one paragraph).
+Description: The honos R package assists with the analysis and visualisation of Health of the Nation Outcome Scales (HoNOS; Wing et al. 1998) <doi:10.1192/bjp.172.1.11>
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -16,4 +17,5 @@ RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
 Imports: 
-    magrittr
+    magrittr,
+    forcats
