add fucntion to calculate subscales

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(as_cluster_desc)
 export(as_i8_desc)
 export(as_item_desc)
 export(as_severity_desc)
+export(calc_honos_subscales)
 export(lag_honos)
 importFrom(magrittr,"%>%")
