--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,6 +4,7 @@ pkgdown_sha: ~
 articles:
   describe_honos: describe_honos.html
   example_honos_datasets: example_honos_datasets.html
+  honos_subscales: honos_subscales.html
   lagged_honos_scores: lagged_honos_scores.html
-last_built: 2021-02-09T14:56Z
+last_built: 2021-02-11T13:36Z
 
