--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ export(as_i8_desc)
 export(as_item_desc)
 export(as_severity_desc)
 export(calc_change_label)
-export(calc_honos_subscales)
+export(calc_subscales)
 export(lag_honos)
 importFrom(magrittr,"%>%")
