add helper function to rename honos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,4 +8,5 @@ export(as_severity_desc)
 export(calc_change_label)
 export(calc_subscales)
 export(lag_honos)
+export(rename_honos)
 importFrom(magrittr,"%>%")
