internal data as tibble, add pivot honos longer version, make item description function more flexible, rename function can now also return new variable names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ export(as_severity_desc)
 export(calc_change_label)
 export(calc_subscales)
 export(lag_honos)
+export(pivot_honos_longer)
 export(rename_honos)
 importFrom(magrittr,"%>%")
+importFrom(tibble,tibble)
