--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: honos
 Title: Analyse and Visualise the Nation Outcome Scales (HoNOS)
-Version: 0.1.1
+Version: 0.1.1.9001
 Date: 2021-02-11
 Authors@R: c(
   person("Milan", "Wiedemann", email = "milan.wiedemann@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0003-1991-282X")),
@@ -23,7 +23,8 @@ Imports:
     dplyr,
     tidyr,
     rlang,
-    stringr
+    stringr,
+    tibble
 Suggests: 
     knitr,
     rmarkdown
