--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,6 +26,8 @@ Imports:
     stringr,
     tibble
 Suggests: 
+    testthat (>= 3.0.0),
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+Config/testthat/edition: 3
